WIP pattern-matching and sparse arrays